v1.3/00.CAS_System_Overview.md
# 00. CAS_System_Overview

## 1. System Name

**CAS (Cost Analysis System)**

## 2. System Purpose

CAS는 신차 수주 시점부터 양산 단계까지의 **차종-품번-단계(Stage) 기준 비용 구조를 정형 데이터로 축적**하고, 규칙 기반 연산을 통해 **각 설계원가(Stage) 단계별 비용 변화, 초도가 및 5년 평균 기준의 원가·수익성·목표 달성 여부를 자동 산출**하는 내부 AX 시스템이다.

CAS의 목적은 단순한 분석 자동화가 아니라, **"과거 특정 시점의 비용 판단이 언제, 누구에 의해, 어떤 기준으로 이루어졌는지"를 재현 가능한 상태로 고정**하는 데 있다.

본 시스템의 목적은 다음 세 가지로 한정된다.

1. 비용 분석에 소요되는 반복 업무를 시스템으로 대체
2. 수주 이후 설계원가(Stage) 단계별 비용 변동을 **시점 고정 데이터(Snapshot)**로 보존
3. 각 설계 단계에서의 비용 증감 이력을 기반으로, **다음 단계에서의 목표 인상·절감 폭을 사전에 설정**할 수 있도록 판단 근거를 제공

※ CAS는 '의사결정 자동화 시스템'이 아니다.
※ CAS는 **의사결정을 위한 계산 결과와 판단 근거를 시간 축 위에 고정하는 시스템**이다.

## 3. Problem Definition (Why CAS)

### 3.1 기존 방식의 문제

* 비용 분석이 엑셀 파일 단위로 분산되어 있음
* 계산 로직이 개인별·파일별로 상이함
* 과거 수주 시점의 기준 데이터가 보존되지 않음
* 목표가 설정이 경험·감각에 의존함

### 3.2 CAS가 해결하는 문제

* 모든 비용 데이터를 **차종-품번-단계(Stage) 기준으로 구조화**

※ 본 시스템에서 말하는 '단계(Stage)'란, 수주 이후 개발 기간 동안 진행되는 설계원가 단계(설원1차·2차·3차), 양산 초도가, 양산 후 설변 단계를 의미하며, 연차(Year) 기준 관리와는 구분된다.

* 모든 계산 로직을 규칙 엔진으로 고정
* 수주 시점 기준 데이터 스냅샷 보존
* 목표 기준(80% / 100%)의 자동 역산 제공

## 4. System Scope

### 4.1 포함 범위 (In Scope)

* 차종 단위 비용 구조 관리
* 품번 단위 상세 원가 관리
* 관리 데이터(인건비, 환율) 기준 적용
* 초도가 / 5년 평균 기준 분석
* 목표 달성 여부 판단
* 미달성 시 리포트 메일 발송
* DB 레벨 제약 + 애플리케이션 레벨 검증에 의한 도메인 무결성 강제

### 4.2 제외 범위 (Out of Scope)

* 원가 예측 모델링 (ML 기반) — Phase 2 검토 대상 (§9 참조)
* 외부 고객용 공개 시스템
* ERP 데이터 수정
* 자동 의사결정 및 승인 기능
* 온톨로지 기반 추론 (OWL, SHACL, SWRL, Triple Store)

> **v1.3 변경:** v1.2에서 Phase 8로 예정되었던 OWL 2 DL 온톨로지 엔진을 **제거**. CAS의 도메인은 폐쇄적(Closed-World)이며, 계산·검증 규칙이 결정론적이므로 DB 제약 + 잘 테스트된 순수 함수로 동일한 보장을 더 낮은 복잡도로 달성할 수 있다. 상세 근거는 본 문서 §8 참조.

## 5. Users & Roles

| Role    | Description                                 |
| ------- | ------------------------------------------- |
| Admin   | 시스템 전체 관리, 사용자 관리                           |
| Manager | 차종 분석 조회, 코멘트 수정 및 승인, 리포트 설정, 기준 데이터 수정 승인 |
| Analyst | 데이터 입력, Snapshot 생성, 코멘트 작성, 기준 데이터 수정     |
| Viewer  | 조회 전용                                       |

> **v1.1 변경:** 기존 `Staff` 역할명을 `Analyst`로 변경. 비용 분석 업무 도메인에 더 적합한 명칭이며, RBAC에서 `ANALYST`로 구현됨.

## 6. High-level Architecture

```
[User]
  └─ Next.js 15 Dashboard (App Router, SSR)
       └─ Node.js API Server (Next.js Route Handlers)
            ├─ PostgreSQL 17 (Relational Persistence, SOT)
            │    ├─ Raw Input Tables (Vehicle, Part, VehicleVolume)
            │    ├─ Snapshot Tables (Immutable — DB Trigger 차단)
            │    ├─ CostComponent Catalog (A/B/C Type 통합)
            │    ├─ Reference Tables (Labor, FX — 지역×연도별)
            │    └─ Constraint Layer (FK, CHECK, UNIQUE, Trigger)
            ├─ Authentication (NextAuth.js Credentials, JWT 8h, RBAC 4-Role)
            ├─ Calculation Engine (Deterministic, Pure Function, Decimal.js)
            ├─ Validation Engine (도메인 불변식 검증, 10. Constraint Spec)
            ├─ Rule-based Evaluation Logic (2-Scenario: 매출원가율 80% / 총비용율 100%)
            └─ Report Mailer (MJML + Nodemailer)
```

> **v1.3 변경:** Ontology Engine(Triple Store, SHACL, SWRL, SPARQL) 제거. 대신 Validation Engine을 도입하여 도메인 불변식을 애플리케이션 레벨에서 검증. 상세는 10. CAS_Constraint_n_Validation_Spec 참조.

Snapshot Tables는 한 번 생성되면 재계산이나 덮어쓰기가 불가하고, 모든 분석 결과는 반드시 Snapshot 기준으로만 산출된다. 도메인 제약은 DB 레벨 제약(Trigger, CHECK)과 Validation Engine의 이중 검증으로 기계적으로 보장된다 (상세: 10. CAS_Constraint_n_Validation_Spec).

## 7. AX Design Principle

### 7.1 Decision Ownership

* 모든 **수치 계산과 목표 판단은 규칙 엔진이 담당**
* LLM은 계산 결과를 요약·설명하는 텍스트 생성에만 사용 가능
* LLM의 출력은 시스템 판단에 영향을 미치지 않는다

### 7.2 Temporal Immutability (시간 불변성)

* 수주 시점, 양산 개시 시점의 모든 입력값은 **Snapshot으로 고정**
* Snapshot 이후의 기준 데이터 변경은 과거 결과에 영향을 주지 않는다

### 7.3 Deterministic First

* 같은 Snapshot 입력이면 언제든 같은 결과가 나와야 한다
* 계산 로직은 버전 관리되며, 결과에 적용된 로직 버전이 기록된다
* 계산 엔진은 순수 함수(Pure Function)로 구현되며, 동일 입력 → 동일 출력이 Property-based Testing으로 보장된다 (08-B 참조)

### 7.4 Human-in-the-loop

* 담당자 코멘트는 판단의 *해석* 영역으로만 사용된다
* 수치·판정 결과는 사용자가 수정할 수 없다

## 8. Architecture Decision Record: 온톨로지 레이어 제거

### 8.1 결정

v1.2에서 Phase 8로 계획되었던 OWL 2 DL 온톨로지 엔진(Triple Store, SHACL, SWRL, SPARQL)을 v1.3에서 **제거**한다.

### 8.2 근거

| 온톨로지가 제공하던 기능 | v1.3 대체 수단 | 비고 |
|---|---|---|
| Snapshot 불변성 강제 (SHACL) | DB Trigger + CHECK 제약 | PostgreSQL 수준에서 충분 |
| Stage 전환 합법성 검증 (SHACL) | FK + 서비스 레이어 검증 | 10. Constraint Spec 참조 |
| 비용 계산 검증 (SWRL) | 순수 함수 + Property-based Testing | 계산 로직 이중 구현 불필요 |
| 평가 판정 검증 (SWRL) | 순수 함수 + 불변식 테스트 | 08-A, 08-B로 보장 |
| 의미 질의 (SPARQL) | SQL JOIN + View | 도메인이 폐쇄적이므로 충분 |

### 8.3 제거 이유 상세

1. **이중 구현의 유지보수 비용:** 동일 계산 로직을 TypeScript와 SWRL로 이중 작성·이중 유지보수해야 했음
2. **SWRL 표현력 한계:** Multi CR, 5년 평균, 제조원가율, 매출원가율 등 복잡 산식의 SWRL 형식화가 v1.2에서 이미 미정의 상태였음
3. **폐쇄 세계 가정과의 모순:** OWL 2 DL은 개방 세계 추론(OWA) 전용 도구인데, CAS는 명시적으로 CWA를 채택
4. **운영 부담:** Apache Jena/Fuseki JVM 프로세스, Triple Store 동기화, 장애 포인트 추가
5. **동기화 위험:** PostgreSQL ↔ Triple Store 간 데이터 불일치 시 전체 시스템 정합성 훼손

### 8.4 대체 검증 전략

```
v1.2: [Calc Engine] ─비교─ [SWRL Engine] → 불일치 시 BLOCKER
v1.3: [Calc Engine (Pure Function)] ─검증─ [Property-based Testing + Domain Invariant Tests] → 실패 시 BLOCKER
```

v1.3은 **런타임 이중 검증** 대신 **빌드 타임 수학적 성질 검증**으로 전환한다. 이는 더 넓은 입력 범위를 커버하면서도 운영 복잡도를 줄인다.

## 9. Phase 2 Roadmap: ML 기반 목표 범위 제안

### 9.1 배경

v1.x의 목표(Target) 설정은 Manager가 고정값(매출원가율 80%, 총비용율 100%)을 수동 입력하는 구조다. 과거 수주 이력이 축적되면, ML 기반으로 **달성 가능한 목표 범위를 참고용으로 제안**하는 기능을 Phase 2에서 검토한다.

### 9.2 접근 방식

```
입력: 과거 차종별 (Stage, 비용항목, 수주가, 실적가) 이력
모델: 비용항목별 경량 회귀 모델 (LightGBM, XGBoost 등)
출력: 각 비용항목의 달성 가능 범위 [하한, 상한] + 달성 확률
```

### 9.3 Decision Ownership 준수

* ML 출력은 **Interpretation** 범주에 해당 (01 §2.1)
* 최종 목표값은 Manager가 결정 — ML은 참고 자료만 제공
* ML 모델은 **사내 서버에서 로컬 학습·추론** (외부 API 호출 없음)

### 9.4 전제 조건

* 최소 과거 수주 이력 20건 이상 축적
* 비용항목별 실적 데이터 정합성 확보
* Phase 1(v1.x) 안정 운영 확인 후 착수

## 10. Success Criteria

* 동일 차종 재분석 시 결과 일관성 100%
* 분석 시간 기존 대비 70% 이상 단축
* 목표 미달성 항목 자동 식별 정확도 100%

## 11. Non-goals

* 비용을 줄여주는 시스템이 아님
* 판단을 대신 내려주는 시스템이 아님

이하 기능·데이터·UI 명세는 이 Overview와 일치해야 한다.
